--- a/src/LoginaPage.form
+++ b/src/LoginaPage.form
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="LoginaPage">
-  <grid id="27dc6" binding="loginPanne" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="loginPanne" layout-manager="GridLayoutManager" row-count="8" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="30" left="30" bottom="30" right="30"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="504" height="591"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-15449486"/>
+      <enabled value="true"/>
+      <foreground color="-1"/>
+      <opaque value="true"/>
+      <visible value="true"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="6a6df" class="javax.swing.JLabel">
@@ -13,56 +19,80 @@
           <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <font name="DialogInput" size="48" style="1"/>
-          <text value="Log In"/>
+          <font name="Chilanka" size="48" style="1"/>
+          <foreground color="-131585"/>
+          <text value="Login"/>
         </properties>
-      </component>
-      <component id="65115" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="User name"/>
-        </properties>
-      </component>
-      <component id="89298" class="javax.swing.JTextField" binding="usernametxt">
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
-      <component id="2feb" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="2" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Password"/>
-        </properties>
-      </component>
-      <component id="8e99b" class="javax.swing.JPasswordField" binding="passwordTxt">
-        <constraints>
-          <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
       </component>
       <component id="264cc" class="javax.swing.JButton" binding="logInButton" default-binding="true">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="3" use-parent-layout="false">
+            <minimum-size width="0" height="0"/>
+          </grid>
         </constraints>
         <properties>
+          <background color="-16112057"/>
+          <font name="Chilanka"/>
+          <foreground color="-1"/>
+          <hideActionText value="false"/>
           <text value="Log in"/>
         </properties>
       </component>
       <component id="9dc25" class="javax.swing.JButton" binding="resetButton" default-binding="true">
         <constraints>
-          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-16112057"/>
+          <font name="Chilanka"/>
+          <foreground color="-1"/>
           <text value="Reset"/>
+        </properties>
+      </component>
+      <component id="89298" class="javax.swing.JTextField" binding="usernametxt">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="2" hsize-policy="7" anchor="8" fill="1" indent="3" use-parent-layout="false">
+            <preferred-size width="10" height="30"/>
+          </grid>
+        </constraints>
+        <properties>
+          <background color="-15449486"/>
+          <dropMode value="INSERT"/>
+          <foreground color="-1"/>
+          <text value=""/>
+          <toolTipText value="Username"/>
+        </properties>
+      </component>
+      <component id="1e93f" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <icon value="lock.png"/>
+          <text value=""/>
+        </properties>
+      </component>
+      <component id="8e99b" class="javax.swing.JPasswordField" binding="passwordTxt">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="3" use-parent-layout="false">
+            <preferred-size width="10" height="30"/>
+          </grid>
+        </constraints>
+        <properties>
+          <background color="-15449486"/>
+          <foreground color="-1"/>
+          <text value=""/>
+        </properties>
+      </component>
+      <component id="73749" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="3" height="3"/>
+          </grid>
+        </constraints>
+        <properties>
+          <icon value="user(1).png"/>
+          <text value=""/>
         </properties>
       </component>
     </children>
