--- a/src/HomePage.form
+++ b/src/HomePage.form
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="HomePage">
-  <grid id="27dc6" binding="homepanel" layout-manager="GridLayoutManager" row-count="12" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="homepanel" layout-manager="GridLayoutManager" row-count="7" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="50" bottom="0" right="15"/>
     <constraints>
-      <xy x="185" y="132" width="470" height="332"/>
+      <xy x="185" y="132" width="816" height="568"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-13863757"/>
+      <enabled value="true"/>
+      <font name="Chilanka"/>
+    </properties>
     <border type="none" title-position="1">
       <font/>
     </border>
@@ -19,57 +23,105 @@
           <text value="HomePage"/>
         </properties>
       </component>
-      <grid id="efd6a" binding="menuPane" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints>
-          <grid row="1" column="3" row-span="11" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-        <border type="none"/>
-        <children/>
-      </grid>
       <component id="54888" class="javax.swing.JButton" binding="issueBookButton" default-binding="true">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="6" height="-1"/>
+          </grid>
         </constraints>
         <properties>
+          <background color="-13863757"/>
+          <enabled value="true"/>
+          <font name="Chilanka"/>
+          <foreground color="-1"/>
+          <hideActionText value="true"/>
+          <horizontalTextPosition value="11"/>
+          <icon value="Isuue.png"/>
           <text value="Issue Book"/>
         </properties>
       </component>
       <component id="dbd1e" class="javax.swing.JButton" binding="bookReturnButton" default-binding="true">
         <constraints>
-          <grid row="3" column="0" row-span="2" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="6" height="-1"/>
+          </grid>
         </constraints>
         <properties>
+          <background color="-13863757"/>
+          <font name="Chilanka"/>
+          <foreground color="-1"/>
+          <icon value="return.png"/>
           <text value="Book Return"/>
         </properties>
       </component>
       <component id="16a12" class="javax.swing.JButton" binding="bookStatusButton" default-binding="true">
         <constraints>
-          <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="6" height="-1"/>
+          </grid>
         </constraints>
         <properties>
+          <background color="-13863757"/>
+          <font name="Chilanka"/>
+          <foreground color="-1"/>
+          <icon value="Status.png"/>
           <text value="Book Status"/>
         </properties>
       </component>
       <component id="405f9" class="javax.swing.JButton" binding="logOutButton" default-binding="true">
         <constraints>
-          <grid row="7" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="60" height="-1"/>
+          </grid>
         </constraints>
         <properties>
-          <text value="Log out"/>
+          <background color="-13863757"/>
+          <font name="Chilanka"/>
+          <foreground color="-1"/>
+          <icon value="logout.png"/>
+          <text value="Logout"/>
         </properties>
       </component>
       <component id="eefa8" class="javax.swing.JButton" binding="newBookButton" default-binding="true">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="6" height="-1"/>
+          </grid>
         </constraints>
         <properties>
-          <background color="-881076"/>
+          <background color="-13863757"/>
           <enabled value="true"/>
+          <font name="Chilanka"/>
+          <foreground color="-1"/>
+          <hideActionText value="true"/>
+          <horizontalTextPosition value="11"/>
+          <icon value="add.png"/>
+          <requestFocusEnabled value="true"/>
+          <rolloverEnabled value="true"/>
           <text value="New Book"/>
         </properties>
       </component>
+      <grid id="b5360" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="1" column="2" row-span="6" col-span="4" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-13863757"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <component id="f65e6" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <icon value="books.png"/>
+              <text value=""/>
+            </properties>
+          </component>
+        </children>
+      </grid>
     </children>
   </grid>
 </form>
