--- a/src/HomePage.form
+++ b/src/HomePage.form
@@ -16,10 +16,11 @@
     <children>
       <component id="2e81e" class="javax.swing.JLabel">
         <constraints>
-          <grid row="0" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="6" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font name="DejaVu Sans Mono" size="36" style="1"/>
+          <foreground color="-1"/>
           <text value="HomePage"/>
         </properties>
       </component>
