--- a/src/LoginPage.form
+++ b/src/LoginPage.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="LoginaPage">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="LoginPage">
   <grid id="27dc6" binding="loginPanne" layout-manager="GridLayoutManager" row-count="8" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="30" left="30" bottom="30" right="30"/>
     <constraints>
