--- a/src/NewBook.form
+++ b/src/NewBook.form
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="NewBook">
-  <grid id="27dc6" binding="NewBookPanel" layout-manager="GridLayoutManager" row-count="8" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="NewBookPanel" layout-manager="GridLayoutManager" row-count="8" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="20" left="20" bottom="20" right="20"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="552" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-13863757"/>
+      <font size="16" style="1"/>
+      <foreground color="-1"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="7a774" class="javax.swing.JLabel">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="6" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="NewBook Page"/>
+          <font size="28" style="1"/>
+          <foreground color="-1"/>
+          <text value="Add New Book "/>
         </properties>
       </component>
       <component id="732c8" class="javax.swing.JLabel">
@@ -23,6 +29,8 @@
           </grid>
         </constraints>
         <properties>
+          <font size="16" style="1"/>
+          <foreground color="-1"/>
           <text value="Book Title"/>
         </properties>
       </component>
@@ -31,16 +39,21 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font size="16" style="1"/>
+          <foreground color="-1"/>
           <text value="Subject"/>
         </properties>
       </component>
       <component id="72143" class="javax.swing.JTextField" binding="Subjecttxt">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+          <grid row="3" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="300" height="30"/>
           </grid>
         </constraints>
         <properties>
+          <background color="-13863757"/>
+          <font size="14" style="1"/>
+          <foreground color="-1"/>
           <text value=""/>
         </properties>
       </component>
@@ -49,22 +62,33 @@
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font size="16" style="1"/>
+          <foreground color="-1"/>
           <text value="Author"/>
         </properties>
       </component>
       <component id="69b96" class="javax.swing.JTextField" binding="AuthorText">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+          <grid row="4" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="300" height="30"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-13863757"/>
+          <font size="14" style="1"/>
+          <foreground color="-1"/>
+        </properties>
       </component>
       <component id="e3ebd" class="javax.swing.JButton" binding="Savebtn">
         <constraints>
-          <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="7" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="20" height="-1"/>
+            <maximum-size width="100" height="50"/>
+          </grid>
         </constraints>
         <properties>
+          <background color="-14446081"/>
+          <foreground color="-1"/>
           <text value="Save"/>
         </properties>
       </component>
@@ -73,57 +97,107 @@
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font size="16" style="1"/>
+          <foreground color="-1"/>
           <text value="Shelf Number"/>
         </properties>
       </component>
       <component id="ca311" class="javax.swing.JTextField" binding="ShelfNumberText">
         <constraints>
-          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+          <grid row="5" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="300" height="30"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-13863757"/>
+          <font size="14" style="1"/>
+          <foreground color="-1"/>
+        </properties>
       </component>
       <component id="b09eb" class="javax.swing.JLabel">
         <constraints>
           <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font size="16" style="1"/>
+          <foreground color="-1"/>
           <text value="Quantity"/>
         </properties>
       </component>
       <component id="81e1" class="javax.swing.JTextField" binding="Quantity">
         <constraints>
-          <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+          <grid row="6" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="300" height="30"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-13863757"/>
+          <font size="14" style="1"/>
+          <foreground color="-1"/>
+        </properties>
       </component>
       <component id="d6bf5" class="javax.swing.JLabel">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font size="16" style="1"/>
+          <foreground color="-1"/>
           <text value="ID"/>
         </properties>
       </component>
       <component id="e5db3" class="javax.swing.JTextField" binding="BookTitletxt">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+          <grid row="2" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="300" height="30"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-13863757"/>
+          <font size="14" style="1"/>
+          <foreground color="-1"/>
+        </properties>
       </component>
       <component id="37847" class="javax.swing.JTextField" binding="IDtxt">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+          <grid row="1" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="300" height="30"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-13863757"/>
+          <font size="14" style="1"/>
+          <foreground color="-1"/>
+        </properties>
       </component>
+      <component id="2155b" class="javax.swing.JButton" binding="homeButton" default-binding="true">
+        <constraints>
+          <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="20" height="-1"/>
+            <maximum-size width="100" height="50"/>
+          </grid>
+        </constraints>
+        <properties>
+          <background color="-13863757"/>
+          <foreground color="-1"/>
+          <text value="Home"/>
+        </properties>
+      </component>
+      <hspacer id="d9e73">
+        <constraints>
+          <grid row="7" column="5" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
+      <hspacer id="cd604">
+        <constraints>
+          <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
+      <hspacer id="1326b">
+        <constraints>
+          <grid row="7" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
     </children>
   </grid>
 </form>
