--- a/src/issueBookPage.form
+++ b/src/issueBookPage.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="IssueBookPanel" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="30" left="30" bottom="30" right="30"/>
     <constraints>
-      <xy x="225" y="123" width="1020" height="452"/>
+      <xy x="248" y="113" width="1020" height="452"/>
     </constraints>
     <properties>
       <background color="-13863757"/>
@@ -15,6 +15,8 @@
           <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font size="28" style="1"/>
+          <foreground color="-1"/>
           <text value="ISSUE BOOK"/>
         </properties>
       </component>
@@ -46,11 +48,13 @@
           <component id="33144" class="javax.swing.JTextField" binding="IDtext">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+                <preferred-size width="250" height="30"/>
               </grid>
             </constraints>
             <properties>
               <background color="-13863757"/>
+              <font size="14" style="1"/>
+              <foreground color="-1"/>
             </properties>
           </component>
           <component id="96ad4" class="javax.swing.JLabel">
@@ -65,11 +69,13 @@
           <component id="15869" class="javax.swing.JTextField" binding="FullnameText">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+                <preferred-size width="250" height="30"/>
               </grid>
             </constraints>
             <properties>
               <background color="-13863757"/>
+              <font size="14" style="1"/>
+              <foreground color="-1"/>
             </properties>
           </component>
           <component id="d7ae2" class="javax.swing.JLabel">
@@ -83,10 +89,14 @@
           </component>
           <component id="14ab8" class="javax.swing.JComboBox" binding="DepartmentCmb">
             <constraints>
-              <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="250" height="30"/>
+              </grid>
             </constraints>
             <properties>
               <background color="-13863757"/>
+              <font size="14" style="1"/>
+              <foreground color="-1"/>
             </properties>
           </component>
           <component id="98a2f" class="javax.swing.JLabel">
@@ -101,11 +111,13 @@
           <component id="9cb91" class="javax.swing.JTextField" binding="DateText">
             <constraints>
               <grid row="4" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+                <preferred-size width="250" height="30"/>
               </grid>
             </constraints>
             <properties>
               <background color="-13863757"/>
+              <font size="14" style="1"/>
+              <foreground color="-1"/>
             </properties>
           </component>
           <component id="5097e" class="javax.swing.JLabel">
@@ -122,6 +134,10 @@
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-13863757"/>
+              <enabled value="true"/>
+              <foreground color="-1"/>
+              <selected value="false"/>
               <text value="Male"/>
             </properties>
           </component>
@@ -130,14 +146,22 @@
               <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-13863757"/>
+              <enabled value="true"/>
+              <foreground color="-1"/>
+              <selected value="false"/>
               <text value="Female"/>
             </properties>
           </component>
           <component id="8ff38" class="javax.swing.JButton" binding="issueButton" default-binding="true">
             <constraints>
-              <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                <maximum-size width="100" height="50"/>
+              </grid>
             </constraints>
             <properties>
+              <background color="-13863757"/>
+              <foreground color="-1"/>
               <text value="Issue"/>
             </properties>
           </component>
@@ -152,12 +176,24 @@
           </component>
           <component id="725c4" class="javax.swing.JTextField" binding="StBookName">
             <constraints>
-              <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+              <grid row="5" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-13863757"/>
+              <font size="14" style="1"/>
+              <foreground color="-1"/>
+            </properties>
+          </component>
+          <component id="ba888" class="javax.swing.JButton" binding="homeButton" default-binding="true">
+            <constraints>
+              <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                <maximum-size width="100" height="50"/>
               </grid>
             </constraints>
             <properties>
               <background color="-13863757"/>
+              <foreground color="-1"/>
+              <text value="Home"/>
             </properties>
           </component>
         </children>
@@ -177,6 +213,8 @@
               <grid row="0" column="0" row-span="1" col-span="14" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font size="16" style="1"/>
+              <foreground color="-1"/>
               <text value="Book"/>
             </properties>
           </component>
@@ -188,7 +226,8 @@
             </constraints>
             <properties>
               <background color="-13863757"/>
-              <foreground color="-13863757"/>
+              <font size="14" style="1"/>
+              <foreground color="-1"/>
               <text value=""/>
             </properties>
           </component>
